# 31.5_2-Smart_Pointers2

./: CMakeLists.txt  README.md
include/: Toy.h  checkblock.h  shared_toy_ptr.h
src/: CMakeLists.txt  SharedToyPtr.cpp  Toy.cpp  checkBlock.cpp  main.cpp
